pom.xml updated

--- a/server-end/statementprocessor/src/main/resources/application.properties
+++ b/server-end/statementprocessor/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} %M - %msg%n
 logging.level.org.hibernate.SQL=debug
 logging.level.=error
-logging.level.com.cts.FormSubmission.=debug
+logging.level.com.cts.statementprocessor.=debug
 logging.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Jackson config
