unit test cases added

--- a/server-end/statementprocessor/src/main/resources/application.properties
+++ b/server-end/statementprocessor/src/main/resources/application.properties
@@ -7,3 +7,5 @@ logging.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Jackson config
 spring.jackson.serialization.fail-on-empty-beans=false
+
+server.servlet.context-path=/statementprocessor-service
